--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -26,4 +26,4 @@ jobs:
   # Run Unit tests- Specify unit tests here 
   
   # sam deploy
-        - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket the-dragon-bucket --capabilities CAPABILITY_IAM --region us-east-1
+        - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-new-world --s3-bucket the-dragon-bucket --capabilities CAPABILITY_IAM --region us-east-1
