--- a/.github/workflows/trigger-jenkins.yml
+++ b/.github/workflows/trigger-jenkins.yml
@@ -1,9 +1,9 @@
-name: Trigger Jenkins Job
+name: Trigger Jenkins Job on Dev Branch
 
 on:
   push:
     branches:
-      - main  # Kích hoạt khi có thay đổi ở nhánh main
+      - dev  # Kích hoạt khi có thay đổi ở nhánh dev
 
 jobs:
   trigger-jenkins:
@@ -15,5 +15,6 @@ jobs:
 
       - name: Trigger Jenkins Job Remotely
         run: |
-          curl -X POST "${{ secrets.JENKINS_URL }}/job/${{ secrets.JENKINS_JOB_NAME }}/build?token=${{ secrets.JENKINS_JOB_TOKEN }}" \
-          --user "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_API_TOKEN }}"
+          curl -X POST "${{ secrets.JENKINS_URL_2 }}/job/${{ secrets.JENKINS_JOB_NAME_2 }}/buildWithParameters?token=${{ secrets.JENKINS_JOB_TOKEN_2 }}" \
+          --user "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_API_TOKEN }}" \
+          --data-urlencode "BRANCH=dev-frontend"
