--- a/.github/workflows/trigger-jenkins.yml
+++ b/.github/workflows/trigger-jenkins.yml
@@ -15,6 +15,6 @@ jobs:
 
       - name: Trigger Jenkins Job Remotely
         run: |
-          curl -X POST "${{ secrets.JENKINS_URL_2 }}/job/${{ secrets.JENKINS_JOB_NAME_2 }}/buildWithParameters?token=${{ secrets.JENKINS_JOB_TOKEN_2 }}" \
+          curl -X POST "${{ secrets.JENKINS_URL_2 }}" \
           --user "${{ secrets.JENKINS_USER }}:${{ secrets.JENKINS_API_TOKEN }}" \
           --data-urlencode "BRANCH=dev-frontend"
