--- a/template.yaml
+++ b/template.yaml
@@ -44,35 +44,35 @@ Resources:
           Type: Api
           Properties:
             Path: /
-            Method: get
+            Method: any
             # RestApiId:
             #   Ref: ApiGatewayApi
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-  postONEItemsFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: index.handler
-      Runtime: nodejs22.x
-      Architectures:
-      - x86_64
-      MemorySize: 128
-      Timeout: 800
-      Description: MongoDB connect post
-      # Policies:
-      #   # Give Create/Read/Update/Delete Permissions to the SampleTable
-      # - DynamoDBCrudPolicy:
-      #     TableName: !Ref SampleTable
-      # Environment:
-      #   Variables:
-      #     # Make table name accessible as environment variable from function code during execution
-      #     SAMPLE_TABLE: !Ref SampleTable
-      Events:
-        ApiEvent:
-          Type: Api
-          Properties:
-            Path: /post
-            Method: POST
+  # postONEItemsFunction:
+  #   Type: AWS::Serverless::Function
+  #   Properties:
+  #     Handler: index.handler
+  #     Runtime: nodejs22.x
+  #     Architectures:
+  #     - x86_64
+  #     MemorySize: 128
+  #     Timeout: 800
+  #     Description: MongoDB connect post
+  #     # Policies:
+  #     #   # Give Create/Read/Update/Delete Permissions to the SampleTable
+  #     # - DynamoDBCrudPolicy:
+  #     #     TableName: !Ref SampleTable
+  #     # Environment:
+  #     #   Variables:
+  #     #     # Make table name accessible as environment variable from function code during execution
+  #     #     SAMPLE_TABLE: !Ref SampleTable
+  #     Events:
+  #       ApiEvent:
+  #         Type: Api
+  #         Properties:
+  #           Path: /
+  #           Method: POST
             # RestApiId:
             #   Ref: ApiGatewayApi
   # This is a Lambda function config associated with the source code: get-by-id.js
